@@ -1,3 +1,6 @@
+* don't need to have all the external modules installed to build the
+  documentation -- niko
+
 2005/9/25 -- released version 20050925_trunk
 
 2005/9/24 -- released version 20050924_trunk
